simple filtering of data
- Removed VolumeAnalyticsStream class and its associated logic for volume analytics.
- Updated MarketDataPublisher to handle filtered trades for BTC/USDT, ETH/USDT, and BNB/USDT.
- Adjusted application.yml to reflect new Kafka topic configurations for filtered trades.
- Simplified app.js to focus on displaying filtered trades with a new table format.
- Modified index.html to remove unnecessary elements and improve layout for trade display.
- Cleaned up styles.css to remove unused styles and added animations for new trade rows.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,10 +36,9 @@ binance:
 kafka:
   topics:
     raw-trades: crypto-raw-trades
-    aggregated-prices: crypto-aggregated-prices
-    volume-analytics: crypto-volume-analytics
-    price-trends: crypto-price-trends
-    alerts: crypto-alerts
+    filtered-trades-btcusdt: crypto-filtered-trades-btcusdt
+    filtered-trades-ethusdt: crypto-filtered-trades-ethusdt
+    filtered-trades-bnbusdt: crypto-filtered-trades-bnbusdt
 
 # WebSocket Server Configuration
 websocket:
