--- a/pom.xml
+++ b/pom.xml
@@ -13,39 +13,28 @@
     </parent>
 
     <groupId>com.crypto</groupId>
-    <artifactId>binance-kafka-streams</artifactId>
+    <artifactId>binance-kafka-producer</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
 
-    <name>Binance Kafka Streams</name>
-    <description>Real-time cryptocurrency data processing pipeline</description>
+    <name>Binance Kafka Producer</name>
+    <description>Binance WebSocket to Kafka producer</description>
 
     <properties>
         <java.version>17</java.version>
-        <kafka.version>3.6.1</kafka.version>
-        <kafka-streams.version>3.6.1</kafka-streams.version>
     </properties>
 
     <dependencies>
         <!-- Spring Boot Starters -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-websocket</artifactId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
         
         <!-- Kafka Dependencies -->
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.kafka</groupId>
-            <artifactId>kafka-streams</artifactId>
-            <version>${kafka-streams.version}</version>
         </dependency>
         
         <!-- WebSocket Client -->
@@ -94,11 +83,6 @@
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.projectreactor</groupId>
-            <artifactId>reactor-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
